# hanfei-shu

./: Cargo.toml  README.md
benches/: msm_bench.rs
docs/: index.html
examples/: basic_msm.rs  cpu_vs_gpu.rs  full_benchmark.rs  official_benchmark.rs  verify_inference.rs
src/: cpu.rs  lib.rs
